--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ CLOUDINARY_API_SECRET=jOJcsdJPIlJg10EvFftACwsOrxE
 
 
 # CockroachDB configuration
-DATABASE_URL=postgresql://footprintsco:TAjl71mmfHf5Tw5k_qLWRQ@sokoyetu-ai-9882.j77.aws-ap-south-1.cockroachlabs.cloud:26257/sokoyetu?sslmode=verify-full
-
+#DATABASE_URL=postgresql://footprintsco:TAjl71mmfHf5Tw5k_qLWRQ@sokoyetu-ai-9882.j77.aws-ap-south-1.cockroachlabs.cloud:26257/sokoyetu?sslmode=verify-full
+DATABASE_URL = "postgresql://footprintsco:TAjl71mmfHf5Tw5k_qLWRQ@sokoyetu-ai-9882.j77.aws-ap-south-1.cockroachlabs.cloud:26257/sokoyetu?sslmode=verify-full"
 
 MLFLOW_TRACKING_URI=http://localhost:5000
 MLFLOW_TRACKING_USERNAME=admin
