--- a/.env
+++ b/.env
@@ -8,11 +8,13 @@ CLOUDINARY_API_SECRET=jOJcsdJPIlJg10EvFftACwsOrxE
 
 # CockroachDB configuration
 #DATABASE_URL=postgresql://footprintsco:TAjl71mmfHf5Tw5k_qLWRQ@sokoyetu-ai-9882.j77.aws-ap-south-1.cockroachlabs.cloud:26257/sokoyetu?sslmode=verify-full
-DATABASE_URL = "postgresql://footprintsco:TAjl71mmfHf5Tw5k_qLWRQ@sokoyetu-ai-9882.j77.aws-ap-south-1.cockroachlabs.cloud:26257/sokoyetu?sslmode=verify-full"
+DATABASE_URL = "postgresql://postgres:rfOqF5MbChKGcFhkmmTb2A@db.rrgoopxxmqzbgnvufgbq.supabase.co:5432/postgres"
 
 MLFLOW_TRACKING_URI=http://localhost:5000
 MLFLOW_TRACKING_USERNAME=admin
-MLFLOW_TRACKING_PASSWORD=your_secure_password
+MLFLOW_TRACKING_PASSWORD=AgiConnect-Ai@2025
+
+
 GRAFANA_ADMIN_PASSWORD=admin
 PROMETHEUS_MULTIPROC_DIR=/tmp/prometheus
 
